registro de cliente en login

--- a/Parcial l/index.html
+++ b/Parcial l/index.html
@@ -21,6 +21,13 @@
             color: #d4d1cc;
             text-decoration: underline;
         }
+        .h3Estilo {
+            font-size: 1.5rem;
+            font-weight: 600;
+            color: #0080ff;
+            margin-bottom: 1rem;
+        }
+
     </style>
 
 
@@ -36,6 +43,7 @@
     <script src="./public/js/guardar_estudiante.js"></script>
     <script src="./public/js/recuperarYvalidarLogin.js"></script>
     <script src="./public/js/guardar_datos.js"></script>
+    <script src="./public/js/camara.js"></script>
 </body>
 
 </html>
