Cambios en registro de clientes

--- a/Parcial l/footer.html
+++ b/Parcial l/footer.html
@@ -3,7 +3,7 @@
   <div class="container-fluid px-4">
     <div class="d-flex align-items-center justify-content-between small">
       <div></div>
-      <div class="d-block">Derechos de autor &copy; desarrollado por Cristian Lisintuña y Alisson Ayo</div>
+      <div class="d-block">Derechos de autor &copy; desarrollado por Cristian Lisintuña -Josue Guayasamin-Alfonso Arroyo </div>
       <div>
         <a href="#" data-bs-toggle="modal" data-bs-target="#privacyModal">
           Política de Privacidad
