--- a/Parcial l/index.html
+++ b/Parcial l/index.html
@@ -10,30 +10,20 @@
     <title>Login - Sistema</title>
     <link href="./css/styles.css" rel="stylesheet" />
     <link href="css/login-styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styleModal.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    <style>
-        .link-accent {
-            color: #8b0d0d;
-            transition: color 0.3s ease;
-        }
-
-        .link-accent:hover {
-            color: #d4d1cc;
-            text-decoration: underline;
-        }
-        .h3Estilo {
-            font-size: 1.5rem;
-            font-weight: 600;
-            color: #0080ff;
-            margin-bottom: 1rem;
-        }
-
-    </style>
-
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
 
 </head>
 
 <body id="contenido">
+
+    <!-- aqui se mostrar el login y register dinamicamente-->
 
 
 
@@ -44,6 +34,7 @@
     <script src="./public/js/recuperarYvalidarLogin.js"></script>
     <script src="./public/js/guardar_datos.js"></script>
     <script src="./public/js/camara.js"></script>
+    <script src="./public/js/geolocation.js"></script>
 </body>
 
 </html>
