--- a/Parcial l/menu_Admin.html
+++ b/Parcial l/menu_Admin.html
@@ -19,13 +19,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase  ms-auto py-4 py-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#" onclick="cargarPaginasLogin('crearPerfil')">CL</a>
+              <a class="nav-link" href="#" >Añadir Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" onclick="cargarPaginasAdmin('verPerfiles')">VER PERFILES</a>
+              <a class="nav-link" href="#" >Ver Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#footer">Derechos de autor</a>
+              <a class="nav-link" href="#" onclick="cargarPaginasAdmin('verPerfiles')">USUARIOS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#footer">Ver facturas</a>
             </li>
           </ul>
         </div>
