--- a/Parcial l/paginasLogin/login.html
+++ b/Parcial l/paginasLogin/login.html
@@ -11,9 +11,12 @@
 <body>
 <div class="login-background">
     <div class="container">
+        
         <div class="row justify-content-center">
             <div class="col-lg-5">
+                <!-- Tarjeta de login-->
                 <div class="login-card">
+                    
                     <div class="card-header">
 
                         <h3>Iniciar Sesión</h3>
